<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:elevation="4dp"
            app:title="Droidfix Lab"
            app:titleMargin="8dp"
            app:titleTextColor="#FFFFFF" />

        <!-- Your main content goes here -->
        <!-- CardView 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="257dp"
            android:layout_height="141dp"
            android:layout_below="@id/my_toolbar"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="#3D5AFE"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp">

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="85dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/version" />

            <TextView
                android:id="@+id/iconLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_below="@id/iconImageView"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/andada"
                android:text="@string/version_uninstall"
                android:textColor="#FFFFFF" />

        </androidx.cardview.widget.CardView>

        <!-- CardView 2 (Below CardView 1) -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="257dp"
            android:layout_height="141dp"
            android:layout_below="@id/cardView1"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="#1E1D1A"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/iconImageView2"
                android:layout_width="85dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/smartphone" />

            <TextView
                android:id="@+id/iconLabelTextView2"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_below="@id/iconImageView2"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/andada"
                android:text="@string/phone_unlock"
                android:textColor="#FFFFFF" />

        </androidx.cardview.widget.CardView>

        <!-- CardView 3-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="257dp"
            android:layout_height="141dp"
            android:layout_below="@id/cardView2"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="#FF4081"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/iconImageView3"
                android:layout_width="85dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/folder" />

            <TextView
                android:id="@+id/iconLabelTextView3"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_below="@id/iconImageView2"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/andada"
                android:text="@string/private_safe_unlock"
                android:textColor="#FFFFFF" />

        </androidx.cardview.widget.CardView>


        <!-- CardView 4-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="257dp"
            android:layout_height="141dp"
            android:layout_below="@id/cardView3"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="#CC062C"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/iconImageView4"
                android:layout_width="85dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/contact" />

            <TextView
                android:id="@+id/iconLabelTextView4"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_below="@id/iconImageView4"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/andada"
                android:text="@string/contact_number_recovery"
                android:textColor="#FFFFFF" />

        </androidx.cardview.widget.CardView>

        <!-- CardView 5-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="257dp"
            android:layout_height="141dp"
            android:layout_below="@id/cardView4"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="#952BFF"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/iconImageView5"
                android:layout_width="85dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/calllog" />

            <TextView
                android:id="@+id/iconLabelTextView5"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_below="@id/iconImageView"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/andada"
                android:text="@string/call_log_recovery"
                android:textColor="#FFFFFF" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>
